LA-47 Fix footer spacing in mobile.

--- a/profiles/vp_profile/themes/vp_theme/css/global.css
+++ b/profiles/vp_profile/themes/vp_theme/css/global.css
@@ -547,6 +547,9 @@ body {
     background-color: transparent !important;
     background-image: none !important; }
 
+.page {
+  overflow: hidden; }
+
 img {
   display: block;
   height: auto;
